--- a/src/can_bus_gui/resource/canbusmain.ui
+++ b/src/can_bus_gui/resource/canbusmain.ui
@@ -53,7 +53,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Texas A&amp;M 12th Unmanned Team SAE Autodrive Canbus Interface</string>
+     <string>Texas A&amp;M SAE Autodrive</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_launch">
@@ -197,9 +197,9 @@ background-color: grey;
     <property name="text">
      <string/>
     </property>
-    <!--<property name="pixmap">
-     <pixmap>canbus_gui/tamu_logo_blue_100x70.png</pixmap>
-    </property>-->
+    <property name="pixmap">
+     <pixmap>tamu_logo_blue_100x70.png</pixmap>
+    </property>
    </widget>
    <widget class="QRadioButton" name="rb_steering">
     <property name="geometry">
