--- a/can_bus_gui/resource/can_start.ui
+++ b/can_bus_gui/resource/can_start.ui
@@ -158,7 +158,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>410</y>
+      <y>390</y>
       <width>431</width>
       <height>20</height>
      </rect>
@@ -171,9 +171,9 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>390</y>
+      <y>370</y>
       <width>291</width>
-      <height>24</height>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -193,7 +193,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>tamu_logo_blue_100x70.png</pixmap>
+     <pixmap>../../../Downloads/tamu_logo_blue_100x70.png</pixmap>
     </property>
    </widget>
    <widget class="QRadioButton" name="rb_steering">
@@ -215,17 +215,20 @@
      <string>can_steering</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_cancel">
+   <widget class="QLabel" name="lbl_logo_atm">
     <property name="geometry">
      <rect>
-      <x>382</x>
-      <y>327</y>
-      <width>71</width>
-      <height>21</height>
+      <x>210</x>
+      <y>20</y>
+      <width>100</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="text">
-     <string>cancel</string>
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>canbus_gui/tamu_logo_blue_100x70.png</pixmap>
     </property>
    </widget>
   </widget>
